--- a/index.html
+++ b/index.html
@@ -8,43 +8,43 @@
 </head>
 
 <body>
-  <div class="aaa">
+  <div class="header">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
+  <div class="main">
+    <p id="add__section">
+      <label for="add-task">Add Item</label>
+    <div class="add__field">
+      <input id="add-task" class="add__input input" type="text">
       <button>Add</button>
     </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
+    <ul id="incomplete__section">
+      <li class="task">
         <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <label class="task__name">Pay Bills</label>
+        <input type="text" class="task__input input">
+        <button class="task__operating-button">Edit</button>
+        <button class="task__delete-button"><img src="./remove.svg"></button>
       </li>
-      <li class="editMode">
+      <li class="task_edit">
         <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <label class="task__name">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task__input input">
+        <button class="task__operating-button">Save</button>
+        <button class="task__delete-button"><img src="./remove.svg"></button>
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
+    <ul id="completed__section">
+      <li class="task">
         <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
+        <label class="task__name">See the Doctor</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="task__operating-button">Edit</button>
+        <button class="task__delete-button"><img src="./remove.svg"></button>
       </li>
     </ul>
   </div>
