--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
-    <p id="add__section">
+    <p id="add">
       <label for="add-task">Add Item</label>
     <div class="add__field">
       <input id="add-task" class="add__input input" type="text">
@@ -21,30 +21,30 @@
     </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incomplete__section">
+    <ul id="incomplete">
       <li class="task">
         <input type="checkbox">
         <label class="task__name">Pay Bills</label>
         <input type="text" class="task__input input">
-        <button class="task__operating-button">Edit</button>
-        <button class="task__delete-button"><img src="./remove.svg"></button>
+        <button class="task__control-btn">Edit</button>
+        <button class="task__delete-btn"><img src="./remove.svg"></button>
       </li>
       <li class="task_edit">
         <input type="checkbox">
         <label class="task__name">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task__input input">
-        <button class="task__operating-button">Save</button>
-        <button class="task__delete-button"><img src="./remove.svg"></button>
+        <button class="task__control-btn">Save</button>
+        <button class="task__delete-btn"><img src="./remove.svg"></button>
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed__section">
+    <ul id="completed">
       <li class="task">
         <input type="checkbox" checked>
         <label class="task__name">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="task__operating-button">Edit</button>
-        <button class="task__delete-button"><img src="./remove.svg"></button>
+        <!-- <input type="text" class="task"> -->
+        <button class="task__control-btn">Edit</button>
+        <button class="task__delete-btn"><img src="./remove.svg"></button>
       </li>
     </ul>
   </div>
