--- a/index.html
+++ b/index.html
@@ -14,37 +14,37 @@
   </div>
   <div class="main">
     <p id="add">
-      <label for="add-task">Add Item</label>
+      <label class="section-title add__title" for="add-task">Add Item</label>
     <div class="add__field">
       <input id="add-task" class="add__input input" type="text">
-      <button>Add</button>
+      <button class="main__btn">Add</button>
     </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incomplete">
+    <h3 class="section-title">Todo</h3>
+    <ul id="incomplete" class="main__section">
       <li class="task">
-        <input type="checkbox">
+        <input type="checkbox" class="main__checkbox">
         <label class="task__name">Pay Bills</label>
         <input type="text" class="task__input input">
-        <button class="task__control-btn">Edit</button>
-        <button class="task__delete-btn"><img src="./remove.svg"></button>
+        <button class="main__btn">Edit</button>
+        <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"></button>
       </li>
-      <li class="task_edit">
-        <input type="checkbox">
+      <li class="task task_edit">
+        <input type="checkbox" class="main__checkbox">
         <label class="task__name">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task__input input">
-        <button class="task__control-btn">Save</button>
-        <button class="task__delete-btn"><img src="./remove.svg"></button>
+        <button class="main__btn">Save</button>
+        <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed">
+    <h3 class="section-title">Completed</h3>
+    <ul id="completed" class="main__section">
       <li class="task">
-        <input type="checkbox" checked>
-        <label class="task__name">See the Doctor</label>
+        <input type="checkbox" class="main__checkbox" checked>
+        <label class="completed__task-name task__name">See the Doctor</label>
         <!-- <input type="text" class="task"> -->
-        <button class="task__control-btn">Edit</button>
-        <button class="task__delete-btn"><img src="./remove.svg"></button>
+        <button class="main__btn">Edit</button>
+        <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"></button>
       </li>
     </ul>
   </div>
