refactor(extended-1.2): add alt attributes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" class="header__image">
+    <img src="./eisenhower-matrix.jpg" class="header__image" alt="eisenhower-matrix">
     <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
@@ -29,7 +29,8 @@
             <h4 class="task__name">Pay Bills</h4>
             <input type="text" class="task__input main__input">
             <button class="main__btn task__edit-btn">Edit</button>
-            <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"></button>
+            <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"
+                alt="delete-icon"></button>
           </article>
         </li>
         <li>
@@ -38,7 +39,8 @@
             <h4 class="task__name">Go Shopping</h4>
             <input type="text" value="Go Shopping" class="task__input main__input">
             <button class="main__btn task__edit-btn">Save</button>
-            <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"></button>
+            <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"
+                alt="delete-icon"></button>
           </article>
         </li>
       </ul>
@@ -52,7 +54,8 @@
             <h4 class="completed__task-name task__name">See the Doctor</h4>
             <input type="text" class="task__input main__input">
             <button class="main__btn task__edit-btn">Edit</button>
-            <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"></button>
+            <button class="main__btn task__delete-btn"><img src="./remove.svg" class="delete-icon"
+                alt="delete-icon"></button>
           </article>
         </li>
       </ul>
